# Cool-bot

./: -1.gitignore  .gitignore  .railwayignore  Dockerfile  Procfile  README.md  bot.py  database.py  pyproject.toml  requirements.txt  setup.sh
