[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-all-in-one-setup"
version = "1.0.0"
description = "Production-ready Discord bot for automatic server setup"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.5.1",
    "python-dotenv>=1.0.1",
]
